<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/cl_description_tv"
        style="@style/weatherLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ellipsize="end"
        android:ems="13"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cl_save_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:button="@drawable/heart_checkbox_selector_drawable"
        android:buttonTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/cl_description_tv"
        app:layout_constraintEnd_toStartOf="@id/cl_refresh_iv"
        app:layout_constraintTop_toTopOf="@id/cl_description_tv" />

    <ImageView
        android:id="@+id/cl_refresh_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_refresh_white_24dp"
        app:layout_constraintBottom_toBottomOf="@id/cl_description_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cl_description_tv" />

    <RadioGroup
        android:id="@+id/cl_day_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_description_tv">

        <RadioButton
            android:id="@+id/cl_today_rb"
            style="@style/dayRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/today_string" />

        <RadioButton
            android:id="@+id/cl_tomorrow_rb"
            style="@style/dayRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomorrow_string" />

        <RadioButton
            android:id="@+id/cl_16day_rb"
            style="@style/dayRadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sixteen_days_string" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cl_forecast_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_day_rg" />

</androidx.constraintlayout.widget.ConstraintLayout>